<resources>
    <!--Titles-->
    <string name="app_name">Swamp Pool</string>
    <string name="title_play">Play</string>
    <string name="title_rules">Swamp Rules</string>
    <string name="title_history">History</string>


    <!--Play fragment-->
    <string name="init_player_count">Player Count: 10</string>
    <string name="player_count">Player Count: %1$d</string>

    <string name="new_game">New Game</string>

    <string name="play_now">\?</string>
    <string name="no_balls">No\nBalls\nLeft</string>

    <string name="next_player">Next Player</string>
    
    <!--Ball nicknames-->
    <string name="ball_1">NAMBAWAN</string>                 <!--Yellow-->
    <string name="ball_2">Bluetooth</string>                <!--Blue-->
    <string name="ball_3">The Colonel</string>              <!--Red-->
    <string name="ball_4">The Trickster</string>            <!--Purple-->
    <string name="ball_5">The Cowboy</string>               <!--Orange-->
    <string name="ball_6">The Swamp Dweller</string>        <!--Green-->
    <string name="ball_7">Rusty</string>                    <!--Brown-->
    <string name="ball_8">The Enigma</string>               <!--Black-->
    <string name="ball_9">Pineapple</string>                <!--Yellow-->
    <string name="ball_10">Alpha Sapphire</string>          <!--Blue-->
    <string name="ball_11">Strawberries & Cream</string>    <!--Red-->
    <string name="ball_12">Purple Rain</string>             <!--Purple-->
    <string name="ball_13">Kowabunga Dude</string>          <!--Orange-->
    <string name="ball_14">The Bushranger</string>          <!--Green-->
    <string name="ball_15">Last But Not Least</string>      <!--Brown-->


    <!--Rules fragment-->
    <string name="rule1">
        1. If your ball goes into the pocket, you\'ve lost. You must announce this to the other players. Do not take any further shots.
    </string>
    <string name="rule2">
        2. If you sink a ball (except your own!), then take an additional shot.\n
        \t\tIf you sink more than one ball in a single shot, you only get one additional shot.
    </string>
    <string name="rule3">
        3. If you commit a foul, then the next player takes an additional shot.\n
        \t\tIf you hit the winning shot, and the cue ball goes into the pocket afterwards, you still win.
    </string>
</resources>
