<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.swamppool.ui.play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.swamppool.ui.rules.RulesFragment"
        android:label="@string/title_rules"
        tools:layout="@layout/fragment_rules" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.swamppool.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>