<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.rules.RulesFragment">

    <TextView
        android:id="@+id/rule1"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/rule1"
        app:layout_constraintBottom_toBottomOf="@id/rule2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rule2"
        android:layout_width="290dp"
        android:layout_height="68dp"
        android:text="@string/rule2"
        app:layout_constraintBottom_toBottomOf="@id/rule3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rule1"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/rule3"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:text="@string/rule3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rule2"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>